Added simple calculator logic
